@@ -3,6 +3,12 @@ Changes that may break existing programs are marked using a star *.
 Development Version
 ===================
 
+Preprocessor:
+* Percent character (%) now yields \% in .tex files, instead of just % which
+would be a LaTeX comment. Lines being different in .mlt and .tex files, this
+made no sense.
+* Comments may be used in text and math mode. They use (* *) and may be nested.
+
 Latex library:
 - packages used by commands in ~title, ~author, ~date and ~prelude of the
 document function are now taken into account
